# request-yo-racks-api

./: .coafile  .coveragerc  .dockerignore  .gitignore  .mergify.yml  .pylintrc  CONTRIBUTORS.txt  Dockerfile  Dockerfile.dev  Makefile  README.rst  docker-compose.yml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/: CONTRIBUTING.rst  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
api/: connexion_redoc.py  connexion_server.py  connexion_utils.py  static.py  urls.py  wsgi.py
api/apps/api/: collectors.py  models.py  serializers.py  urls.py  views.py
api/apps/api/collectors/: base.py  collector.py  generic.py  google.py  yelp.py
api/apps/api/tests/: google_collector_search_epoch_coffee.json  test_collectors.py  test_integration_collectors.py  test_test.py
api/apps/api/tests/collectors/: test_base.py  test_generic.py  test_google.py  test_yelp.py
api/celery/: celery.py  celery_settings.py  tasks.py  worker.py
api/celery/tests/: test_tasks.py
api/collectors/: base.py  generic.py  google.py  yelp.py
api/controller/: health.py  place.py  places.py
api/settings/: base.py  common.py  local.py  production.py  testing.py
api/templates/: base.html
bootstrap/: bootstrap-osx.sh
charts/: values.common.yaml  values.minikube.yaml  values.prod.yaml
charts/celery-worker/: values.minikube.yaml
docker/: docker-entrypoint.sh
docker/api/: celery-entrypoint.sh  django-entrypoint.sh
docker/env-files/: celery.env
docker/nginx/: Dockerfile  nginx.conf
docs/source/: conf.py  contributing.rst  index.rst  installation.rst  usage.rst
docs/source/collectors/: collectors.rst  modules.rst
openapi/: openapi.yaml
requirements/: _base.txt  _docs.txt  _static.txt  _tests.txt  local.txt
tests/: google_collector_details_epoch_coffee.json  test_integration_collectors.py
tests/celery/: test_tasks.py
tests/collectors/: test_base.py  test_generic.py  test_google.py  test_yelp.py
tools/: kubernetes-django-env-vars.sh  kubernetes-django-manage.sh
