[metadata]
name = api
summary = A REST API for Request-Yo-Racks.
description-file =
    README.rst
author = Rémy Greinhofer
author-email = remy.greinhofer@gmail.com
home-page = http://www.github.com/
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[extras]
docs =
  Sphinx==1.6.6
  sphinxjp.themes.basicstrap==0.4.3
lint =
  coala==0.11.0.dev20170323154158
  coala-bears==0.10.0.dev20170323155546
local =
  bpython==0.16
  q==2.6
  tox==2.9.1
  wheel==0.30.0
  yapf==0.20.0
testing =
  Faker==0.8.9
  model-mommy==1.5.0
  pytest==3.3.2
  pytest-cov==2.5.1
  pytest-mock==1.6.3

[entry_points]
console_scripts =
    api = api.main:main

[build_sphinx]
source-dir = docs/source
build-dir = docs/build
all_files = 1
warning-is-error = 1

[pbr]
builder = html
skip_authors = True
skip_changelog = True
warnerrors = True

[wheel]
universal = 0
