[metadata]
name = api
summary = A REST API for Request-Yo-Racks.
description-file =
    README.rst
author = Rémy Greinhofer
author-email = remy.greinhofer@gmail.com
home-page = http://www.github.com/
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[extras]
docs =
  Sphinx==1.7.5
  sphinxjp.themes.basicstrap==0.4.3
linters =
  coala==0.11.0
  coala-bears==0.11.1
local =
  bpython==0.17.1
  q==2.6
  tox==3.0.0
  wheel==0.31.1
  yapf==0.22.0
testing =
  Faker==0.8.16
  model-mommy==1.6.0
  pytest==3.6.1
  pytest-cov==2.5.1
  pytest-mock==1.10.0

[entry_points]
console_scripts =
    api = api.main:main

[build_sphinx]
source-dir = docs/source
build-dir = docs/build
all_files = 1
warning-is-error = 1

[pbr]
builder = html
skip_authors = True
skip_changelog = True
warnerrors = True

[wheel]
universal = 0
