[metadata]
name = api
summary = A REST API for Request-Yo-Racks.
description-file =
    README.rst
author = Rémy Greinhofer
author-email = remy.greinhofer@gmail.com
home-page = http://www.github.com/
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[files]
data_files =
    etc/ryr-api = openapi/openapi.yaml

[entry_points]
console_scripts =
    api = api.main:main

[build_sphinx]
source-dir = docs/source
build-dir = docs/build
all_files = 1
warning-is-error = 1

[pbr]
builder = html
skip_authors = True
skip_changelog = True
warnerrors = True

[wheel]
universal = 0

[flake8]
exclude =
  *.egg-info,
  *.pyc,
  .cache,
  .eggs
  .git,
  .tox,
  __pycache__,
  build,
  dist,
  docs/source/conf.py,
  */settings/*
  */tests/*,
  venv
import-order-style = google
max-complexity = 10
max-line-length = 120

[pydocstyle]
match = (?!test_|__).*\.py
match-dir =([^\.].*|venv)

[tool:pytest]
addopts = --disable-socket
